another change in arrows to  maybe fix visibility

--- a/static/styles.css
+++ b/static/styles.css
@@ -102,8 +102,7 @@ body {
     width: 100%;
     position: relative;
     margin-bottom: 20px;
-    padding: 5px;
-    background-color: rgba(255, 255, 255, 0.9); /* Semi-transparent background */
+    padding: 5px; /* Semi-transparent background */
     /*z-index: 2;*/
 }
 
